#71: Correctly map INTERVAL and GEOMETRY types (#81)
* #71: Correctly map INTERVAL and GEOMETRY types
Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>