@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.exasol</groupId>
     <artifactId>exasol-virtual-schema</artifactId>
-    <version>6.0.3</version>
+    <version>7.0.0</version>
     <name>Exasol Virtual Schema</name>
     <description>This projects contains the Exasol dialect for Exasol's Virtual Schema</description>
     <url>https://github.com/exasol/exasol-virtual-schema/</url>
     <properties>
-        <vscjdbc.version>9.0.5</vscjdbc.version>
+        <vscjdbc.version>10.0.1</vscjdbc.version>
     </properties>
     <distributionManagement>
         <snapshotRepository>
@@ -62,7 +61,8 @@
             <groupId>com.exasol</groupId>
             <artifactId>virtual-schema-common-jdbc</artifactId>
             <version>${vscjdbc.version}</version>
-            <type>test-jar</type>
+            <classifier>tests</classifier>
+            <type>jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.exasol</groupId>
             <artifactId>exasol-testcontainers</artifactId>
-            <version>6.1.2</version>
+            <version>6.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -140,7 +140,7 @@
             <plugin>
                 <groupId>com.exasol</groupId>
                 <artifactId>project-keeper-maven-plugin</artifactId>
-                <version>2.4.6</version>
+                <version>2.7.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -189,23 +189,6 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <additionalOptions>
-                        <option>--add-modules</option>
-                        <option>java.sql</option>
-                        <option>--add-reads</option>
-                        <option>java.xml.bind=java.sql</option>
-                        <option>--add-reads</option>
-                        <option>org.glassfish.jakarta.json=java.sql</option>
-                        <option>--add-reads</option>
-                        <option>org.glassfish.jakarta.json=java.util.logging</option>
-                    </additionalOptions>
-                    <failOnWarnings>false</failOnWarnings>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <useModulePath>false</useModulePath>
@@ -229,7 +212,7 @@
     <parent>
         <artifactId>exasol-virtual-schema-generated-parent</artifactId>
         <groupId>com.exasol</groupId>
-        <version>6.0.3</version>
+        <version>7.0.0</version>
         <relativePath>pk_generated_parent.pom</relativePath>
     </parent>
 </project>
